test/files/neg/t8731.check
t8731.scala:12: warning: could not emit switch for @switch annotated match
  def g(x: Int) = (x: @annotation.switch) match {
                       ^
1 warning
error: No warnings can be incurred under -Werror.
